# VLA-FYP

./: README.md  pyproject.toml  requirements_.txt
data/: stage_1_datasets.py
training/: stage_1_sft_training.py
