[project]
name = "shree-fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "peft>=0.19.1",
    "transformers>=5.5.4",
    "torch==2.10.0",
    "torchvision==0.25.0"
]
